k8s/tremplin-frontend/deployment-tremplin-frontend-prod.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tremplin-frontend
  labels:
    app: tremplin-frontend
    branch: tremplin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tremplin-frontend
  template:
    metadata:
      labels:
        app: tremplin-frontend
    spec:
      containers:
      - image:  ${TREMPLIN_REGISTRY}/frontend:${IMAGE_TAG}
        name: tremplin-frontend
        ports:
        - containerPort: ${PORT}
        livenessProbe:
          httpGet:
            path: /
            port: ${PORT}
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: ${PORT}
          initialDelaySeconds: 3
          periodSeconds: 5
