k8s/tremplin-frontend/deployment-tremplin-frontend.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tremplin-frontend${HASH_BRANCH_NAME}
  labels:
    app: tremplin-frontend${HASH_BRANCH_NAME}
    branch: tremplin${HASH_BRANCH_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tremplin-frontend${HASH_BRANCH_NAME}
  template:
    metadata:
      labels:
        app: tremplin-frontend${HASH_BRANCH_NAME}
    spec:
      containers:
      - image:  ${TREMPLIN_REGISTRY}/frontend:${IMAGE_TAG}
        name: tremplin-frontend
        ports:
        - containerPort: ${PORT}
        livenessProbe:
          httpGet:
            path: /
            port: ${PORT}
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: ${PORT}
          initialDelaySeconds: 3
          periodSeconds: 5
