k8s/tremplin-frontend/service-tremplin-frontend.yml
---
kind: Service
apiVersion: v1
metadata:
  name: tremplin-frontend${HASH_BRANCH_NAME}
  labels:
    app: tremplin-frontend${HASH_BRANCH_NAME}
    branch: tremplin${HASH_BRANCH_NAME}
spec:
  selector:
    app: tremplin-frontend${HASH_BRANCH_NAME}
  ports:
  - port: ${PORT}
    name: frontend
