k8s/tremplin-frontend/ingress-tremplin-frontend.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tremplin-frontend${HASH_BRANCH_NAME}
  labels:
    app: tremplin-frontend${HASH_BRANCH_NAME}
    branch: tremplin${HASH_BRANCH_NAME}
spec:
  rules:
  - host: ${HASH_BRANCH_INGRESS}tremplin.${ENVIRONMENT}.social.gouv.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: tremplin-frontend${HASH_BRANCH_NAME}
          servicePort: ${PORT}
